feat: add token to requests in Swagger UI
